# show-ip

./: README.md  show-ip.cabal  showip.cabal
.stack-work/install/x86_64-linux/lts-12.20/8.4.4/flag-cache/: showip-0.1.0.0
src/: Main.hs
