name:                show-ip
version:             0.1.0.0
description:         Show the IP address for a given host name
homepage:            https://github.com/maxhallinan/show-ip#readme
license:             BSD3
license-file:        LICENSE
author:              Max Hallinan
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable show-ip
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network
